Add : initilize libraray

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+/* on search mark/highlighted text  */
+.ngx-text-highlight {
+    padding: 0;
+    background-color: #4c5c94;;
+    color: white;
+}
